--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
+<CODE
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DONTECH</title>
+    <title>TecnoTest</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #1640D6;
+            background-color: #f4f4f4;
             margin: 0;
             padding: 0;
         }
 
         header {
-            background-color: #001B79;
-            color: #FF9209;
+            background-color: #0f1810;
+            color: #C70039;
             text-align: center;
             padding: 1em;
         }
@@ -23,13 +25,13 @@
             max-width: 800px;
             margin: 2em auto;
             padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #cca3a3;
+            box-shadow: 0 0 10px rgba(223, 218, 218, 0.1);
         }
 
         footer {
-            background-color: #333;
-            color: #fff;
+            background-color: #1a250d;
+            color: #0d5f96;
             text-align: center;
             padding: 1em;
             position: fixed;
@@ -41,16 +43,16 @@
 <body>
 
     <header>
-        <h1>DONTECH</h1>
+        <h1>TecnoTest</h1>
     </header>
 
     <section>
-        <h2>¡Bienvenidos a la mejor tienda de tecnología!</h2>
-        <p>Aqui encontraras lo ultimo en tecnologia</p>
+        <h2>¡TecnoTest donde encontraras de todo en técnologia!</h2>
+        <p>¡Bienvenido, aca te brindamos calidad y los mejores precios!</p>
     </section>
 
     <footer>
-        <p>&copy; 2023 Mi Página Web</p>
+        <p>&copy; Innovacion al instante</p>
     </footer>
 
 </body>
