--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         nav a {
             color: #fdfafa;
             text-decoration: none;
-            background-color: #052407;
+            background-color: #000000;
             border-radius: 20%;
             padding: 0.5em 0.3em;
             margin: 0 0.3em;
@@ -62,8 +62,8 @@
         }
 
         footer {
-            background-color: #010a13;
-            color: #f1e7e7;
+            background-color: #330202;
+            color: #9b1818;
             text-align: center;
             padding: 1em;
             bottom: 0;
@@ -148,6 +148,8 @@
     </div>
     <!-- Fin Galería de Fotos -->
     <footer>
+        <section>
+            <h2>"Tú experiencia con nosotros sera inigualable"
         <p>&copy; TecnoTest</p>
     </footer>
 
